# xy_work

./: .gitmodules  .xy-codehub-ci.yml  MANIFEST.in  README.md  pyproject.toml
readme/: README_en.md  README_zh_CN.md  README_zh_TW.md
test/hello/config/: xy_work.toml
test/hello/source/Runner/: Runner.py
test/test_work/config/: xy_work.toml
test/test_work/source/Runner/: Runner.py
test/xy_test_work/config/: xy_work.toml
test/xy_test_work/source/Runner/: Runner.py
xy_work/: ModuleData.py  Work.py  __init__.py
xy_work/Settings/: Settings.py
xy_work/Settings/Section/: Project.py  Runner.py
xy_work/data/template/config/: xy_work_toml.template
xy_work/data/template/runner/: runner_py.template
xy_work/execute/: Main.py
