[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11.3"

name = "xy_work"

authors = [{ name = "余洋", email = "yuyangit.0515@qq.com" }]
description = "xy_work 模块"

dynamic = ["version"]

classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["importlib_resources", "xy_file", "xy_settings", "xy_argparse"]

readme = "README.md"

[project.scripts]
xy_work = "xy_work.execute.Main:main"

[tool.setuptools.packages.find]
where = ["./"]
include = ["xy_work"] # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
